welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: missing parameter type
		if (croisement()) { if (x<=2) {droite}; if (x=>3) {gauche();}
                                                            ^