welcome.lessons.welcome.loopdowhile.Poucet.scala.code

do{ 		var x:Int=0; avance();
		do{x=x+1} while(estSurBiscuit)
		if (croisement()) { if (x<=2) {droite}; if (x=>3) {gauche();}
} }
while(sortieTrouvee)
